--- a/TextProject/TextProject.csproj
+++ b/TextProject/TextProject.csproj
@@ -43,8 +43,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AnalyseHelpercs.cs" />
+    <Compile Include="FunctionClass.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TextAnalyser.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
