--- a/TextProject/TextProject.csproj
+++ b/TextProject/TextProject.csproj
@@ -47,6 +47,7 @@
     <Compile Include="FunctionClass.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="StringExtensions.cs" />
     <Compile Include="TextAnalyser.cs" />
   </ItemGroup>
   <ItemGroup>
